; ModuleID = '/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_mkchkimg.c_netgear_checksum_add.c'
source_filename = "/home/carl/AnghaBench/openwrt/tools/firmware-utils/src/extr_mkchkimg.c_netgear_checksum_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ngr_checksum = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ngr_checksum*, i8*, i64)* @netgear_checksum_add to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @netgear_checksum_add(%struct.ngr_checksum* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.ngr_checksum*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.ngr_checksum* %0, %struct.ngr_checksum** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store i64 0, i64* %7, align 8
  br label %8

8:                                                ; preds = %33, %3
  %9 = load i64, i64* %7, align 8
  %10 = load i64, i64* %6, align 8
  %11 = icmp ult i64 %9, %10
  br i1 %11, label %12, label %36

12:                                               ; preds = %8
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* %7, align 8
  %15 = getelementptr inbounds i8, i8* %13, i64 %14
  %16 = load i8, i8* %15, align 1
  %17 = zext i8 %16 to i32
  %18 = and i32 %17, 255
  %19 = sext i32 %18 to i64
  %20 = load %struct.ngr_checksum*, %struct.ngr_checksum** %4, align 8
  %21 = getelementptr inbounds %struct.ngr_checksum, %struct.ngr_checksum* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = add nsw i64 %22, %19
  store i64 %23, i64* %21, align 8
  %24 = load %struct.ngr_checksum*, %struct.ngr_checksum** %4, align 8
  %25 = getelementptr inbounds %struct.ngr_checksum, %struct.ngr_checksum* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load %struct.ngr_checksum*, %struct.ngr_checksum** %4, align 8
  %28 = getelementptr inbounds %struct.ngr_checksum, %struct.ngr_checksum* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = sext i32 %29 to i64
  %31 = add nsw i64 %30, %26
  %32 = trunc i64 %31 to i32
  store i32 %32, i32* %28, align 8
  br label %33

33:                                               ; preds = %12
  %34 = load i64, i64* %7, align 8
  %35 = add i64 %34, 1
  store i64 %35, i64* %7, align 8
  br label %8

36:                                               ; preds = %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
